change - design fixes change - result video controls are visible only after video generation

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,102 +1,117 @@
- body{
-  padding: 30px 30px 30px 30px;
- }
- .hintlabel { 
-  width: 100%;
-  background: solid #cccccc;
-  font-size: medium;
-  margin: 10px 0 10px 0;
- }
-.input_div{
-  width: 100%;
+body {
+    padding: 30px 30px 30px 30px;
 }
 
-.input_param {  
-  width: 100%;
-  margin: 10px 0 10px 0;
-  border: 1px solid #cccccc;
-  padding: 6px 12px;
-  display: inline-block;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
- }
+.hintlabel {
+    width: 100%;
+    font-size: small;
+    margin: 10px 0 10px 0;
+}
 
- #authors_selector{  
-  width: 100%;
-  margin: 10px 0 10px 0;
-  border: 1px solid #cccccc;
-  padding: 6px 12px;
+.input_div {
+    width: 100%;
+}
+
+#result {
+    height: 50%;
+    margin: 10px 0 10px 0;
+    vertical-align: center;
+    width: 70%;
+}
+
+#gum {
+    height: 50%;
+    margin: 10px 0 10px 0;
+    vertical-align: center;
+    width: 70%;
+}
+
+.input_param {
+    width: 100%;
+    margin: 10px 0 10px 0;
+    border: 1px solid #cccccc;
+    padding: 6px 12px;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
     -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
- }
-
-#mylist{
-  width: 100%;
-  height: 500px;
-  margin: 10px 0 10px 0;
-  border: 1px solid #cccccc;
-  padding: 6px 12px;
-  display: inline-block;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
-#gum  {
-  height: 100%;
-  margin: 10px 0 10px 0;
-  vertical-align: top;
-  width: 100%;
+#authors_selector {
+    width: 100%;
+    margin: 10px 0 10px 0;
+    border: 1px solid #cccccc;
+    padding: 6px 12px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
-#body { 
+
+#mylist {
+    width: 100%;
+    height: 220px;
+    margin: 10px 0 10px 0;
+    border: 1px solid #cccccc;
+    padding: 6px 12px;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+#body {
     padding: 20px 12px 20px 20px;
 }
-#record { 
+
+#record {
     margin: 0 0 20px 0;
 }
-#generate { 
+
+#generate {
     margin: 10px 0 20px 0;
 }
+audio{
+    margin: 10px 50px 20px 50px;
+}
 
-#lyrics_text{
-  height: 500px;
-  width: 100%;
-  margin: 10px 0 10px 0;
-  border: 1px solid #cccccc;
-  padding: 6px 12px;
-  display: inline-block;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+#lyrics_text {
+    height: 700px;
+    width: 100%;
+    font-size: x-large;
+    margin: 10px 0 10px 0;
+    border: 1px solid #cccccc;
+    padding: 6px 12px;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
